# reviewing_json_schema_dataset

./: .gitignore  README.md  pyproject.toml
data/: Vetigo JSON SCHEMA - L12-QC-20250224.csv  Vetigo JSON SCHEMA - L12-QC-20250225.csv
data/batch_004_L-1_400-500/: 00_seed.csv  00_seed_410_500.csv  00_seed_455_500.csv  02_results_410_500.csv  02_results_455_500.csv  test.csv
data/batch_004_L-1_500-600/: 00_seed_500_600.csv  02_result_500_550.csv  02_result_550_600.csv
notebook/: eval_L0_8M.ipynb  eval_json_reference.ipynb  eval_log.ipynb  eval_response_customer.ipynb  eval_sub_schemas.ipynb  seed_generator.ipynb
tara/: orchestrator.py  orchestrator_brutal_force.py  orchestrator_consensus.py  orchestrator_eval.py
tara/evalPII/: change_prompt_pipeline.py  eval_PII_actions.py  eval_prompt_full_names_pipeline.py
tara/lib/: action.py  pipeline.py
tara/prompt_fixer/: prompt_fixer_actions.py  prompt_fixer_pipeline.py
tara/reviewing_json_schema/: eval_PII_actions.py  eval_actions.py  eval_actionsv2.py  eval_prompt_PII_self_contained_pipeline.py  eval_prompt_action_pipeline.py  eval_prompt_pipeline.py  eval_prompt_sub_schema_pipeline.py  eval_prompt_sub_schema_pipelinev2.py  eval_selfContained_Action.py  seed_top_layer.py  summary_actions.py  summary_pipeline.py
tara/reviewing_json_schema_brutal_force/: clean_filter_pipeline.py  consensus_pipeline.py  eval_orchestrator.py  fix_prompt_action.py  fix_prompt_pipeline.py  generate_response_action.py  generate_response_pipeline.py  validate_response_action.py  validate_response_pipeline.py
tara/utils/: google_sheet.py  (+1 more)
(+12 files in other folders)
