[project]
name = "reviewing_json_schema_dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastjsonschema>=2.21.1",
    "fastparquet>=2024.11.0",
    "gspread>=6.1.4",
    "ipykernel>=6.29.5",
    "jsonschema>=4.23.0",
    "langdetect>=1.0.9",
    "mysql-connector-python>=9.2.0",
    "ollama>=0.4.7",
    "openai>=1.62.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
]
